k8s/2-promotion-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: promotion-api-service
spec:
  type: ClusterIP
  selector:
    app: promotion-api-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotion-api-deployment
  labels:
    app: promotion-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotion-api-pod
  template:
    metadata:
      labels:
        app: promotion-api-pod
    spec:
      containers:
        - name: promotion-api
          image: promotion-api:1.0
          ports:
            - containerPort: 8080
